image view added

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,8 +13,10 @@
     tools:context="ithands.ithandshelloworddemo.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"/>
+        android:src="@mipmap/ic_launcher"
+        android:contentDescription="null"
+        />
 </RelativeLayout>
